--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 body {
   background-color: #eee;
 }
+
+#book-cards-holder {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: auto;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
