--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
   background-color: #eee;
 }
 
+/* Book Cards Holder Section */
+
 #book-cards-holder {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -9,4 +11,50 @@ body {
   justify-content: center;
   align-items: center;
   gap: 2rem;
+}
+
+/* Modal Section */
+
+#modal {
+  display: block;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+#modal-content-holder {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#modal-content {
+  margin: auto;
+  width: 40%;
+}
+
+/* Modal input section */
+
+#input-holder {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+#checkbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+#checkbox > p {
+  margin: 0;
 }
