--- a/style.css
+++ b/style.css
@@ -15,16 +15,14 @@ body {
 
 /* Modal Section */
 
-#overlay {
+#modal {
   display: block;
   position: fixed;
-  z-index: 1;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgba(0, 0, 0, 0.2);
 }
 
 #modal-content-holder {
@@ -38,6 +36,16 @@ body {
 #modal-content {
   margin: auto;
   width: 40%;
+}
+
+#overlay {
+  z-index: 1;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 /* Modal input section */
