--- a/style.css
+++ b/style.css
@@ -18,3 +18,15 @@ body {
 #template-book-card {
   display: none;
 }
+
+@media all and (max-width: 1000px) {
+  #book-cards-holder {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media all and (max-width: 650px) {
+  #book-cards-holder {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
